# agentichound-trace

./: .gitignore  CONTRIBUTING.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
collector/: Cargo.toml
collector/fixtures/: ingest-invalid.json  ingest-pcd.json  ingest-valid.json
collector/src/: lib.rs  main.rs  normalize.rs  storage.rs  types.rs  validate.rs  viewer.html
collector/tests/: contract.rs  persistence.rs
docs/: architecture.md  collector-contract.md  collector-quickstart.md  persistence.md  progress-collapse-detector-spec.md  quickstart-diagnostics.md  release-notes-v0.1.0-alpha.1.md  roadmap.md  sdk-design.md  trace-schema-v0.md  versioning-release-plan.md  vision.md
docs/integrations/: README.md  nyex-integration-prompt-template.md
examples/rust-nyex-demo/: README.md
examples/sample-traces/: README.md
examples/ts-basic-agent/: README.md
schemas/: trace.schema.json
schemas/examples/: failed-run-01.json  failed-run-02.json  failed-run-03.json  failed-run-04.json  failed-run-05.json  failed-run-06.json  failed-run-07.json  failed-run-08.json  happy-path-01.json  happy-path-02.json  happy-path-03.json  happy-path-04.json  happy-path-05.json  happy-path-06.json  happy-path-07.json  happy-path-08.json  happy-path-09.json  invalid-missing-run-id.json  pcd-low-progress-sample.json  retry-then-success-01.json  retry-then-success-02.json  retry-then-success-03.json  retry-then-success-04.json  retry-then-success-05.json  retry-then-success-06.json  retry-then-success-07.json  retry-then-success-08.json  retry-then-success-09.json  tool-bottleneck-01.json  tool-bottleneck-02.json  tool-bottleneck-03.json  (+6 more)
scripts/: generate_trace_samples.ps1  validate_collector_contract_fixtures.py  validate_trace_samples.py
sdk/go/: README.md
sdk/rust/: Cargo.toml
sdk/rust/examples/: emit_e2e.rs  progress_collapse_detector.rs
sdk/rust/src/: client.rs  contract_v0.rs  diagnostics.rs  lib.rs  trace.rs
sdk/rust/tests/: parity.rs  pcd.rs
(+7 files in other folders)
