[package]
name = "collector-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local collector core for AgenticHound Trace"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
jsonschema = "0.18"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
