[package]
name = "agentichound-trace"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Runtime tracing and bottleneck profiling SDK for agent systems"

[lib]
name = "agentichound_trace"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
